 * Fixed the extractor raising an exception when encountering an empty string
   msgid. It now emits a warning to stderr.
 * Numerous Python message extractor fixes: it now handles nested function
   calls within a gettext function call correctly, uses the correct line number
   for multi-line function calls, and other small fixes (tickets #38 and #39).


Version 0.8.1
http://svn.edgewall.org/repos/babel/tags/0.8.1/
(Jul 2 2007, from branches/stable/0.8.x)

 * `default_locale()` would fail when the value of the `LANGUAGE` environment
   variable contained multiple language codes separated by colon, as is
   explicitly allowed by the GNU gettext tools. As the `default_locale()`
   function is called at the module level in some modules, this bug would
   completely break importing these modules on systems where `LANGUAGE` is set
   that way.
 * The character set specified in PO template files is now respected when
   creating new catalog files based on that template. This allows the use of
   characters outside the ASCII range in POT files (ticket #17).
 * The default ordering of messages in generated POT files, which is based on
   the order those messages are found when walking the source tree, is no
   longer subject to differences between platforms; directory and file names
   are now always sorted alphabetically.
 * The Python message extractor now respects the special encoding comment to be
   able to handle files containing non-ASCII characters (ticket #23).
 * Added 'N_' (gettext noop) to the extractor's default keywords.
 * Made locale string parsing more robust, and also take the script part into
   account (ticket #27).
 * Added a function to list all locales for which locale data is available.
 * Added a command-line option to the `pybabel` command which prints out all
   available locales (ticket #24).
 * The name of the command-line script has been changed from just `babel` to
   `pybabel` to avoid a conflict with the OpenBabel project (ticket #34).

